# RenderTest

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  generate.bat  generate_with_ssln.bat  main.sharpmake.cs  sharpmake_debug.vs2017.csproj
engine/: .editorconfig  config.cef  imgui.ini  rendertest_runtimedependencies.txt  test.html
engine/res/: test.txt
engine/res/shaders/: debug-primitive.fs  debug-primitive.gs  debug-primitive.vs  gui-surface.fs  gui-surface.vs  phong-shading.fs  phong-shading.vs  test-display.fs  test-display.vs  tiles-display.fs  tiles-display.vs
engine/src/: config.cef  lib.h  main.c  main.cpp
engine/src/application/: application.h
engine/src/asset-manager/: asset-manager.cpp  asset-manager.h  image-loader.cpp  image-loader.h  obj-loader.c  obj-loader.cpp  obj-loader.h  text-loader.cpp  text-loader.h  texture-loader.cpp  texture-loader.h
engine/src/bgl/: shader.c  shader.cpp  shader.h  texture2d.h
engine/src/debug/: error.h  gassert.h  globals.cpp  globals.h
engine/src/editor/: editor.cpp  editor.h
engine/src/entry-point/: entry-point.h  global_systems.h
engine/src/events/: event.h  (+2 more)
gui/src/: gui-manager.cpp  gui-manager.h  gui.cpp  gui.h  key-map.h  ultralight-event-mapping.h
res/shaders/: test-display.fs  test-display.vs
src/: main.c
src/asset-manager/: obj-loader.c  obj-loader.h
src/bgl/: shader.c  shader.h
src/graphics/: camera.c  camera.h  light.c  light.h
src/math/: math_utils.h
src/scene/: mesh.c  mesh.h  render-object.c  render-object.h  scene.c  scene.h  texture.h
tests/src/: tests.cpp
(+141 files in other folders)
